change into request dto